--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
         <!-- Main Page -->
         <main>
             @@include('./html/_hero.html')
+            @@include('./html/_catalog.html')
         </main>
 
         <!-- Footer -->
