--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         <main>
             @@include('./html/_hero.html')
             @@include('./html/_catalog.html')
+            @@include('./html/_benefits.html')
         </main>
 
         <!-- Footer -->
