--- a/src/html/_benefits.html
+++ b/src/html/_benefits.html
@@ -7,7 +7,7 @@
                 </div>
 
                 <div class="benefits-text">
-                    <p class="benefits-title --section-title">Наши преимущества</p>
+                    <strong class="benefits-title --section-title">Наши преимущества</strong>
 
                     <p class="benefits-description --text-subtitle">
                         Оптимизация мощностей (расходов, социальных выплат и&nbsp;т.п.) позволили компании
