--- a/src/html/_catalog.html
+++ b/src/html/_catalog.html
@@ -3,7 +3,7 @@
         <div class="catalog-content">
             <ul class="catalog-list">
                 <li class="catalog-item">
-                    <p class="catalog-title --section-title">Каталог товаров от&nbsp;Dell</p>
+                    <strong class="catalog-title --section-title">Каталог товаров от&nbsp;Dell</strong>
 
                     <p class="catalog-description --text-subtitle">
                         Наша компания является зарегистрированным и&nbsp;официальным партнером Dell
