--- a/src/html/_hero.html
+++ b/src/html/_hero.html
@@ -25,7 +25,7 @@
                     <div class="hero-text-main">
                         <span class="hero-subtitle --text-subtitle"> Новое поступление </span>
 
-                        <p class="hero-title --section-title">Лучшие товары от&nbsp;компании Dell</p>
+                        <strong class="hero-title --section-title">Лучшие товары от&nbsp;компании Dell</strong>
 
                         <div class="hero-info">
                             <button class="--arrow-btn"></button>
