--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
             @@include('./html/_hero.html')
             @@include('./html/_catalog.html')
             @@include('./html/_benefits.html')
+            @@include('./html/_news.html')
         </main>
 
         <!-- Footer -->
