--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
             @@include('./html/_catalog.html')
             @@include('./html/_benefits.html')
             @@include('./html/_news.html')
+            @@include('./html/_request.html')
         </main>
 
         <!-- Footer -->
