--- a/src/html/_benefits.html
+++ b/src/html/_benefits.html
@@ -15,7 +15,7 @@
                     </p>
 
                     <div class="benefits-info hero-info">
-                        <button class="--arrow-btn"></button>
+                        <a href="#" class="--arrow-btn"></a>
                         <a href="#" class="hero-info-link --section-info-link">Оставить заявку</a>
                     </div>
                 </div>
