--- a/src/html/_catalog.html
+++ b/src/html/_catalog.html
@@ -11,7 +11,7 @@
                     </p>
 
                     <div class="catalog-info hero-info">
-                        <button class="--arrow-btn"></button>
+                        <a href="#" class="--arrow-btn"></a>
                         <a href="#" class="hero-info-link --section-info-link">В каталог</a>
                     </div>
                 </li>
