--- a/src/html/_hero.html
+++ b/src/html/_hero.html
@@ -28,8 +28,8 @@
                         <strong class="hero-title --section-title">Лучшие товары от&nbsp;компании Dell</strong>
 
                         <div class="hero-info">
-                            <button class="--arrow-btn"></button>
-                            <a href="#" class="hero-info-link --section-info-link"> Побробнее </a>
+                            <a href="#" class="--arrow-btn"></a>
+                            <a href="#" class="hero-info-link --section-info-link">Подробнее</a>
                         </div>
                     </div>
                 </div>
