--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Test-assigment</title>
+        <title>Test-assignment</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap"
             rel="stylesheet"
         />
-        <link
-                rel="stylesheet"
-                href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-        />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
         <link rel="stylesheet" href="./css/style.min.css" />
     </head>
 
@@ -23,15 +20,13 @@
         @@include('./html/_header.html')
         <!-- Main Page -->
         <main>
-            @@include('./html/_hero.html')
-            @@include('./html/_catalog.html')
-            @@include('./html/_benefits.html')
-            @@include('./html/_news.html')
+            @@include('./html/_hero.html') @@include('./html/_catalog.html')
+            @@include('./html/_benefits.html') @@include('./html/_news.html')
             @@include('./html/_request.html')
         </main>
 
         <!-- Footer -->
-<!--        @@include('./html/_footer.html')-->
+        @@include('./html/_footer.html')
     </body>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
