--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,5 +1,150 @@
-<footer>
-  <div class="container">
-    <div class="footer">Footer</div>
-  </div>
+<footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-top">
+                <a href="#" class="footer-logo">
+                    <img src="../img/logo.svg" alt="logo" />
+                </a>
+
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <span class="footer-item-title">Каталог</span>
+
+                        <ul class="footer-item-catalog-list">
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Ноутбуки</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Персональные компьютеры</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Серверы</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Dell EMC</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#"> Запасные части к Dell EMC </a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="footer-item">
+                        <span class="footer-item-title">Личный кабинет</span>
+
+                        <ul class="footer-item-catalog-list">
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Профиль</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">История заказов</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">SMS-уведомления</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Избранное</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Сравнение товаров</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="footer-item">
+                        <span class="footer-item-title">Помощь</span>
+
+                        <ul class="footer-item-catalog-list">
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Доставка и оплата</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Контакты</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">FAQ</a>
+                            </li>
+                            <li class="footer-item-catalog-item">
+                                <a href="#">Наш АСЦ</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer-bottom">
+                <ul class="footer-bottom-list">
+                    <li class="footer-bottom-item">
+                        <span class="footer-bottom-item-title">Адрес</span>
+
+                        <address>Москва, ул. 3-я Хорошевская, дом 2, строение 1</address>
+                    </li>
+
+                    <li class="footer-bottom-item">
+                        <span class="footer-bottom-item-title">Телефон</span>
+
+                        <div class="phones">
+                            <a href="tel:74957370601">+7 495 737-06-01</a>
+                            <strong>,</strong>
+                            <a href="tel:74957370601">+7 495 737-06-01</a>
+                        </div>
+                    </li>
+
+                    <li class="footer-bottom-item">
+                        <span class="footer-bottom-item-title">E-mail</span>
+
+                        <a href="mailto:dell_ru@gmail.com">dell_ru@gmail.com</a>
+                    </li>
+                </ul>
+
+                <ul class="footer-bottom-social">
+                    <li class="footer-bottom-social-item">
+                        <a href="#">
+                            <svg
+                                width="38"
+                                height="38"
+                                viewBox="0 0 38 38"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <circle
+                                    cx="18.856"
+                                    cy="18.856"
+                                    r="17.356"
+                                    stroke="#292D32"
+                                    stroke-width="3"
+                                />
+                                <path
+                                    d="M22.9521 19.9545L23.4407 16.5678H20.3841V14.3709C20.3841 13.4444 20.8112 12.5403 22.1802 12.5403H23.5699V9.65694C23.5699 9.65694 22.3087 9.4281 21.1029 9.4281C18.5855 9.4281 16.9401 11.0501 16.9401 13.9865V16.5678H14.1418V19.9545H16.9401V28.1418C18.0812 28.3316 19.2431 28.3316 20.3841 28.1418V19.9545H22.9521Z"
+                                    fill="#292D32"
+                                />
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="footer-bottom-social-item">
+                        <a href="#">
+                            <svg
+                                width="38"
+                                height="38"
+                                viewBox="0 0 38 38"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M9.36724 33.3911L8.76998 33.0004L8.09002 33.2173C7.67666 33.3492 7.12251 33.5214 6.49304 33.717C5.6119 33.9907 4.58316 34.3103 3.5864 34.6295C3.69996 34.2695 3.81574 33.9016 3.92998 33.5356C4.36589 32.139 4.8171 30.656 4.93122 29.9866L5.03554 29.3748L4.67707 28.8681C2.67573 26.0395 1.5 22.5873 1.5 18.856C1.5 9.27056 9.27056 1.5 18.856 1.5C28.4415 1.5 36.212 9.27056 36.212 18.856C36.212 28.4415 28.4415 36.212 18.856 36.212C15.3514 36.212 12.0936 35.1749 9.36724 33.3911Z"
+                                    stroke="#292D32"
+                                    stroke-width="3"
+                                />
+                                <path
+                                    d="M28.2839 24.824C28.2839 25.1635 28.2083 25.5123 28.0478 25.8517C27.8873 26.1911 27.6796 26.5117 27.4058 26.8134C26.9431 27.3225 26.4332 27.6902 25.8572 27.9259C25.2907 28.1616 24.677 28.2841 24.016 28.2841C23.0529 28.2841 22.0237 28.0579 20.9379 27.5959C19.852 27.1339 18.7662 26.5117 17.6898 25.7291C16.6039 24.9372 15.5747 24.0604 14.5927 23.0893C13.6202 22.1088 12.7421 21.0811 11.9584 20.0063C11.1841 18.9315 10.5609 17.8567 10.1077 16.7914C9.65447 15.7166 9.42786 14.6889 9.42786 13.7084C9.42786 13.0673 9.54116 12.4545 9.76777 11.8888C9.99439 11.3137 10.3532 10.7857 10.8536 10.3143C11.4579 9.72037 12.1189 9.4281 12.8176 9.4281C13.082 9.4281 13.3464 9.48467 13.5824 9.5978C13.8279 9.71094 14.0451 9.88065 14.215 10.1258L16.4056 13.2087C16.5756 13.4444 16.6983 13.6613 16.7833 13.8687C16.8683 14.0667 16.9155 14.2647 16.9155 14.4438C16.9155 14.6701 16.8494 14.8963 16.7172 15.1132C16.5945 15.33 16.4151 15.5563 16.1885 15.7826L15.4708 16.5274C15.367 16.6311 15.3198 16.7537 15.3198 16.9045C15.3198 16.9799 15.3292 17.0459 15.3481 17.1214C15.3764 17.1968 15.4048 17.2534 15.4236 17.3099C15.5936 17.621 15.8863 18.0264 16.3018 18.5167C16.7267 19.007 17.1799 19.5066 17.6709 20.0063C18.1808 20.506 18.6717 20.968 19.1722 21.3922C19.6632 21.8071 20.0692 22.0899 20.3902 22.2596C20.4374 22.2785 20.4941 22.3068 20.5602 22.335C20.6357 22.3633 20.7113 22.3728 20.7962 22.3728C20.9568 22.3728 21.0795 22.3162 21.1834 22.2125L21.901 21.5054C22.137 21.2697 22.3636 21.0906 22.5808 20.9774C22.798 20.8454 23.0151 20.7794 23.2512 20.7794C23.4306 20.7794 23.6194 20.8171 23.8272 20.902C24.0349 20.9868 24.2521 21.1094 24.4881 21.2697L27.6135 23.4853C27.859 23.655 28.0289 23.853 28.1328 24.0887C28.2272 24.3244 28.2839 24.5601 28.2839 24.824Z"
+                                    fill="#292D32"
+                                />
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </footer>
