fix burger menu

--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -7,23 +7,25 @@
 
             <div class="header-left">
                 <nav class="header-nav">
-                    <ul class="header-nav-list menu">
-                        <li class="header-nav-item">
-                            <a href="#"> Главная</a>
-                        </li>
-                        <li class="header-nav-item">
-                            <a href="#">Каталог</a>
-                        </li>
-                        <li class="header-nav-item">
-                            <a href="#">Новости</a>
-                        </li>
-                        <li class="header-nav-item">
-                            <a href="#">Наш АСЦ</a>
-                        </li>
-                        <li class="header-nav-item">
-                            <a href="#">Контакты</a>
-                        </li>
-                    </ul>
+                    <div class="overlay">
+                        <ul class="header-nav-list menu">
+                            <li class="header-nav-item">
+                                <a href="#">Главная</a>
+                            </li>
+                            <li class="header-nav-item">
+                                <a href="#">Каталог</a>
+                            </li>
+                            <li class="header-nav-item">
+                                <a href="#">Новости</a>
+                            </li>
+                            <li class="header-nav-item">
+                                <a href="#">Наш АСЦ</a>
+                            </li>
+                            <li class="header-nav-item">
+                                <a href="#">Контакты</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
             </div>
 
@@ -195,105 +197,105 @@
                                 </div>
                             </section>
 
-<!--                            <section class="section section-developers">-->
-<!--                                <div class="header-dropdown">-->
-<!--                                    <div class="header-dropdown-heading">-->
-<!--                                        <div class="header-dropdown-user">-->
-<!--                                            <div>-->
-<!--                                                <svg-->
-<!--                                                    width="21"-->
-<!--                                                    height="23"-->
-<!--                                                    viewBox="0 0 21 23"-->
-<!--                                                    fill="none"-->
-<!--                                                    xmlns="http://www.w3.org/2000/svg"-->
-<!--                                                >-->
-<!--                                                    <path-->
-<!--                                                        d="M20.2232 21.8578V19.6184C20.2232 18.4306 19.7338 17.2914 18.8628 16.4515C17.9918 15.6115 16.8104 15.1396 15.5785 15.1396H6.2892C5.05736 15.1396 3.87597 15.6115 3.00492 16.4515C2.13388 17.2914 1.64453 18.4306 1.64453 19.6184V21.8578"-->
-<!--                                                        stroke="#292D32"-->
-<!--                                                        stroke-width="1.5"-->
-<!--                                                        stroke-linecap="round"-->
-<!--                                                        stroke-linejoin="round"-->
-<!--                                                    />-->
-<!--                                                    <path-->
-<!--                                                        d="M10.9337 10.6607C13.4989 10.6607 15.5784 8.65548 15.5784 6.18191C15.5784 3.70835 13.4989 1.70312 10.9337 1.70312C8.36855 1.70312 6.28906 3.70835 6.28906 6.18191C6.28906 8.65548 8.36855 10.6607 10.9337 10.6607Z"-->
-<!--                                                        stroke="#292D32"-->
-<!--                                                        stroke-width="1.5"-->
-<!--                                                        stroke-linecap="round"-->
-<!--                                                        stroke-linejoin="round"-->
-<!--                                                    />-->
-<!--                                                </svg>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
+                            <!--                            <section class="section section-developers">-->
+                            <!--                                <div class="header-dropdown">-->
+                            <!--                                    <div class="header-dropdown-heading">-->
+                            <!--                                        <div class="header-dropdown-user">-->
+                            <!--                                            <div>-->
+                            <!--                                                <svg-->
+                            <!--                                                    width="21"-->
+                            <!--                                                    height="23"-->
+                            <!--                                                    viewBox="0 0 21 23"-->
+                            <!--                                                    fill="none"-->
+                            <!--                                                    xmlns="http://www.w3.org/2000/svg"-->
+                            <!--                                                >-->
+                            <!--                                                    <path-->
+                            <!--                                                        d="M20.2232 21.8578V19.6184C20.2232 18.4306 19.7338 17.2914 18.8628 16.4515C17.9918 15.6115 16.8104 15.1396 15.5785 15.1396H6.2892C5.05736 15.1396 3.87597 15.6115 3.00492 16.4515C2.13388 17.2914 1.64453 18.4306 1.64453 19.6184V21.8578"-->
+                            <!--                                                        stroke="#292D32"-->
+                            <!--                                                        stroke-width="1.5"-->
+                            <!--                                                        stroke-linecap="round"-->
+                            <!--                                                        stroke-linejoin="round"-->
+                            <!--                                                    />-->
+                            <!--                                                    <path-->
+                            <!--                                                        d="M10.9337 10.6607C13.4989 10.6607 15.5784 8.65548 15.5784 6.18191C15.5784 3.70835 13.4989 1.70312 10.9337 1.70312C8.36855 1.70312 6.28906 3.70835 6.28906 6.18191C6.28906 8.65548 8.36855 10.6607 10.9337 10.6607Z"-->
+                            <!--                                                        stroke="#292D32"-->
+                            <!--                                                        stroke-width="1.5"-->
+                            <!--                                                        stroke-linecap="round"-->
+                            <!--                                                        stroke-linejoin="round"-->
+                            <!--                                                    />-->
+                            <!--                                                </svg>-->
+                            <!--                                            </div>-->
+                            <!--                                        </div>-->
 
-<!--                                        <span> Мария </span>-->
-<!--                                    </div>-->
+                            <!--                                        <span> Мария </span>-->
+                            <!--                                    </div>-->
 
-<!--                                    <ul class="header-dropdown-list">-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> Личный кабинет </a>-->
-<!--                                        </li>-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> История заказов </a>-->
-<!--                                        </li>-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> Персональные предложения </a>-->
-<!--                                        </li>-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> Выйти </a>-->
-<!--                                        </li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </section>-->
+                            <!--                                    <ul class="header-dropdown-list">-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> Личный кабинет </a>-->
+                            <!--                                        </li>-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> История заказов </a>-->
+                            <!--                                        </li>-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> Персональные предложения </a>-->
+                            <!--                                        </li>-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> Выйти </a>-->
+                            <!--                                        </li>-->
+                            <!--                                    </ul>-->
+                            <!--                                </div>-->
+                            <!--                            </section>-->
 
-<!--                            <section class="section section-company">-->
-<!--                                <div class="header-dropdown">-->
-<!--                                    <div class="header-dropdown-heading">-->
-<!--                                        <div class="header-dropdown-user">-->
-<!--                                            <div>-->
-<!--                                                <svg-->
-<!--                                                    width="21"-->
-<!--                                                    height="23"-->
-<!--                                                    viewBox="0 0 21 23"-->
-<!--                                                    fill="none"-->
-<!--                                                    xmlns="http://www.w3.org/2000/svg"-->
-<!--                                                >-->
-<!--                                                    <path-->
-<!--                                                        d="M20.2232 21.8578V19.6184C20.2232 18.4306 19.7338 17.2914 18.8628 16.4515C17.9918 15.6115 16.8104 15.1396 15.5785 15.1396H6.2892C5.05736 15.1396 3.87597 15.6115 3.00492 16.4515C2.13388 17.2914 1.64453 18.4306 1.64453 19.6184V21.8578"-->
-<!--                                                        stroke="#292D32"-->
-<!--                                                        stroke-width="1.5"-->
-<!--                                                        stroke-linecap="round"-->
-<!--                                                        stroke-linejoin="round"-->
-<!--                                                    />-->
-<!--                                                    <path-->
-<!--                                                        d="M10.9337 10.6607C13.4989 10.6607 15.5784 8.65548 15.5784 6.18191C15.5784 3.70835 13.4989 1.70312 10.9337 1.70312C8.36855 1.70312 6.28906 3.70835 6.28906 6.18191C6.28906 8.65548 8.36855 10.6607 10.9337 10.6607Z"-->
-<!--                                                        stroke="#292D32"-->
-<!--                                                        stroke-width="1.5"-->
-<!--                                                        stroke-linecap="round"-->
-<!--                                                        stroke-linejoin="round"-->
-<!--                                                    />-->
-<!--                                                </svg>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
+                            <!--                            <section class="section section-company">-->
+                            <!--                                <div class="header-dropdown">-->
+                            <!--                                    <div class="header-dropdown-heading">-->
+                            <!--                                        <div class="header-dropdown-user">-->
+                            <!--                                            <div>-->
+                            <!--                                                <svg-->
+                            <!--                                                    width="21"-->
+                            <!--                                                    height="23"-->
+                            <!--                                                    viewBox="0 0 21 23"-->
+                            <!--                                                    fill="none"-->
+                            <!--                                                    xmlns="http://www.w3.org/2000/svg"-->
+                            <!--                                                >-->
+                            <!--                                                    <path-->
+                            <!--                                                        d="M20.2232 21.8578V19.6184C20.2232 18.4306 19.7338 17.2914 18.8628 16.4515C17.9918 15.6115 16.8104 15.1396 15.5785 15.1396H6.2892C5.05736 15.1396 3.87597 15.6115 3.00492 16.4515C2.13388 17.2914 1.64453 18.4306 1.64453 19.6184V21.8578"-->
+                            <!--                                                        stroke="#292D32"-->
+                            <!--                                                        stroke-width="1.5"-->
+                            <!--                                                        stroke-linecap="round"-->
+                            <!--                                                        stroke-linejoin="round"-->
+                            <!--                                                    />-->
+                            <!--                                                    <path-->
+                            <!--                                                        d="M10.9337 10.6607C13.4989 10.6607 15.5784 8.65548 15.5784 6.18191C15.5784 3.70835 13.4989 1.70312 10.9337 1.70312C8.36855 1.70312 6.28906 3.70835 6.28906 6.18191C6.28906 8.65548 8.36855 10.6607 10.9337 10.6607Z"-->
+                            <!--                                                        stroke="#292D32"-->
+                            <!--                                                        stroke-width="1.5"-->
+                            <!--                                                        stroke-linecap="round"-->
+                            <!--                                                        stroke-linejoin="round"-->
+                            <!--                                                    />-->
+                            <!--                                                </svg>-->
+                            <!--                                            </div>-->
+                            <!--                                        </div>-->
 
-<!--                                        <span> Мария </span>-->
-<!--                                    </div>-->
+                            <!--                                        <span> Мария </span>-->
+                            <!--                                    </div>-->
 
-<!--                                    <ul class="header-dropdown-list">-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> Личный кабинет </a>-->
-<!--                                        </li>-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> История заказов </a>-->
-<!--                                        </li>-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> Персональные предложения </a>-->
-<!--                                        </li>-->
-<!--                                        <li class="header-dropdown-item">-->
-<!--                                            <a href="#"> Выйти </a>-->
-<!--                                        </li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </section>-->
+                            <!--                                    <ul class="header-dropdown-list">-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> Личный кабинет </a>-->
+                            <!--                                        </li>-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> История заказов </a>-->
+                            <!--                                        </li>-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> Персональные предложения </a>-->
+                            <!--                                        </li>-->
+                            <!--                                        <li class="header-dropdown-item">-->
+                            <!--                                            <a href="#"> Выйти </a>-->
+                            <!--                                        </li>-->
+                            <!--                                    </ul>-->
+                            <!--                                </div>-->
+                            <!--                            </section>-->
                         </div>
                         <div class="background"></div>
                         <div class="arrow"></div>
