--- a/src/html/_news.html
+++ b/src/html/_news.html
@@ -13,7 +13,7 @@
 
                 <div class="news-heading-text-info hero-info">
                     <a href="#" class="hero-info-link --section-info-link">Все новости</a>
-                    <button class="--arrow-btn"></button>
+                    <a href="#" class="--arrow-btn"></a>
                 </div>
             </div>
 
