--- a/src/html/_request.html
+++ b/src/html/_request.html
@@ -187,8 +187,8 @@
                     </div>
 
                     <div class="request-right-form-info">
-                        <button class="--arrow-btn"></button>
-                        <button type="submit" class="hero-info-link">Заказать</button>
+                        <div class="--arrow-btn"></div>
+                        <button type="submit" class="request-right-form-info-btn hero-info-link">Заказать</button>
                     </div>
                 </form>
             </div>
